<resources>
    <string name="app_name">玩Android</string>

    <string name="basic_ui_dialog_btn_yes">确定</string>
    <string name="basic_ui_dialog_btn_no">取消</string>
    <string name="basic_ui_dialog_btn_close">关闭</string>

    <!--==========================web页面============================-->
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="read_later">稍后阅读</string>
    <string name="open_in_browser">用浏览器打开</string>

    <!--==========================todo============================-->
    <string name="todo_title">TODO</string>
    <string name="todo">待办</string>
    <string name="done_todo">已完成</string>
    <string name="todo_all">全部</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_life">生活</string>
    <string name="todo_other">其他</string>
    <string name="failed_to_obtain_todo_list">获取TODO数据失败</string>
    <string name="tv_add_todo_title">标题:</string>
    <string name="tv_add_todo_content">详情:</string>
    <string name="tv_add_todo_label">标签:</string>
    <string name="tv_add_todo_priority">优先级:</string>
    <string name="tv_add_todo_date">日期:</string>
    <string name="hint_add_todo_not_null">必填</string>
    <string name="hint_add_todo_null_able">非必填</string>
    <string name="todo_no_label">无标签</string>
    <string name="todo_priority_1">重要</string>
    <string name="todo_priority_2">一般</string>
    <string name="todo_edit_title">编辑</string>
    <string name="todo_new_title">新建</string>
    <string name="bt_todo_save">保存</string>
    <string name="bt_choose_label">选择标签</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="add_todo_success">已保存</string>
    <string name="add_todo_failed">保存失败</string>
    <string name="update_todo_success">已更新</string>
    <string name="update_todo_failed">更新失败</string>
    <string name="update_todo_status_success">操作成功</string>
    <string name="update_todo_status_failed">操作失败</string>
    <string name="delete_todo_success">删除成功</string>
    <string name="delete_todo_failed">删除失败</string>
    <string name="saving">正在保存…</string>
    <string name="marked_completed">标为已完成</string>
    <string name="marked_todo">标为未完成</string>
    <string name="delete_todo">删除</string>
    <string name="confirm_delete_todo">确认删除？</string>

    <!--==========================版本更新============================-->
    <string name="basic_ui_dialog_update_title">发现新版本</string>
    <string name="basic_ui_dialog_update_yes">立即更新</string>
    <string name="basic_ui_dialog_update_no">暂不更新</string>

    <!--==========================版本下载============================-->
    <string name="basic_ui_dialog_download_state_downloading">下载更新中...</string>
    <string name="basic_ui_dialog_download_state_install">立即安装</string>

    <!--==========================权限申请============================-->
    <string name="basic_ui_dialog_permission_close">暂不授权</string>
    <string name="basic_ui_dialog_permission_next">去授权</string>
    <string name="basic_ui_dialog_permission_next_go_setting">去设置</string>
    <string name="basic_ui_dialog_permission_title_unknow">未知</string>
    <string name="basic_ui_dialog_permission_title_calendar">日历</string>
    <string name="basic_ui_dialog_permission_title_camera">照相机</string>
    <string name="basic_ui_dialog_permission_title_contacts">通讯录</string>
    <string name="basic_ui_dialog_permission_title_location">定位</string>
    <string name="basic_ui_dialog_permission_title_microphone">麦克风</string>
    <string name="basic_ui_dialog_permission_title_phone">手机</string>
    <string name="basic_ui_dialog_permission_title_sms">短信</string>
    <string name="basic_ui_dialog_permission_title_sensors">传感器</string>
    <string name="basic_ui_dialog_permission_title_storage">存储空间</string>
    <string name="basic_ui_dialog_permission_description_title_holder">相关</string>
    <string name="basic_ui_dialog_permission_description">我们需要获取%s权限以确保应用的正常运行，请点击去授权完成权限申请。</string>
    <string name="basic_ui_dialog_permission_description_go_setting">您已拒绝应用使用%s权限，这将影响功能的正常运行，请前往设置打开权限。</string>
    <string name="basic_ui_dialog_permission_install_title">安装应用</string>
    <string name="basic_ui_dialog_permission_install">我们将开始请求安装应用权限</string>
    <string name="basic_ui_dialog_permission_overlay_title">悬浮窗</string>
    <string name="basic_ui_dialog_permission_overlay">我们将开始请求悬浮窗权限</string>
    <string name="basic_ui_dialog_permission_setting_title">修改设置</string>
    <string name="basic_ui_dialog_permission_setting">我们将开始请求修改设置权限</string>
    <string name="basic_ui_dialog_permission_notificationAccess_title">访问通知</string>
    <string name="basic_ui_dialog_permission_notificationAccess">我们将开始请求访问通知权限</string>
    <string name="basic_ui_dialog_permission_notificationShow_title">显示通知</string>
    <string name="basic_ui_dialog_permission_notificationShow">我们将开始请求显示通知权限</string>



</resources>
