<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="1dp"
    android:background="@drawable/article_tag_bg"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_10"
    android:background="@color/text_invert"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/share"
            android:drawableLeft="@drawable/ic_share_green_24dp"
            android:textColor="@color/black"
            android:textSize="15sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/collect"
            android:drawableLeft="@drawable/ic_favorite_light_24dp"
            android:textColor="@color/black"
            android:textSize="15sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_readlater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/read_later"
            android:drawableLeft="@drawable/ic_favorite_light_24dp"
            android:textColor="@color/black"
            android:textSize="15sp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/open_in_browser"
            android:drawableLeft="@drawable/ic_open_in_browser_green_24dp"
            android:textColor="@color/black"
            android:textSize="15sp" />




    </LinearLayout>
</LinearLayout>



</androidx.cardview.widget.CardView>